docs-archive/apache-airflow-providers-edge3/5.0.0/_sources/_api/airflow/providers/edge3/cli/dataclasses/index.rst.txt
airflow.providers.edge3.cli.dataclasses
=======================================

.. py:module:: airflow.providers.edge3.cli.dataclasses


Classes
-------

.. autoapisummary::

   airflow.providers.edge3.cli.dataclasses.MaintenanceMarker
   airflow.providers.edge3.cli.dataclasses.WorkerStatus
   airflow.providers.edge3.cli.dataclasses.Job


Module Contents
---------------

.. py:class:: MaintenanceMarker

   Maintenance mode status.


   .. py:attribute:: maintenance
      :type:  str


   .. py:attribute:: comments
      :type:  str | None


   .. py:property:: json
      :type: str


      Get the maintenance status as JSON.



   .. py:method:: from_json(json_str)
      :staticmethod:


      Create a Maintenance object from JSON.



.. py:class:: WorkerStatus

   Status of the worker.


   .. py:attribute:: job_count
      :type:  int


   .. py:attribute:: jobs
      :type:  list


   .. py:attribute:: state
      :type:  airflow.providers.edge3.models.edge_worker.EdgeWorkerState


   .. py:attribute:: maintenance
      :type:  bool


   .. py:attribute:: maintenance_comments
      :type:  str | None


   .. py:attribute:: drain
      :type:  bool


   .. py:property:: json
      :type: str


      Get the status as JSON.



   .. py:method:: from_json(json_str)
      :staticmethod:


      Create a WorkerStatus object from JSON.



.. py:class:: Job

   Holds all information for a task/job to be executed as bundle.


   .. py:attribute:: edge_job
      :type:  airflow.providers.edge3.worker_api.datamodels.EdgeJobFetched


   .. py:attribute:: process
      :type:  subprocess.Popen | multiprocessing.Process

      Can be subprocess.Popen (for the spawn path) or multiprocessing.Process (for the fork path).



   .. py:attribute:: logfile
      :type:  pathlib.Path


   .. py:attribute:: logsize
      :type:  int
      :value: 0


      Last size of log file, point of last chunk push.



   .. py:attribute:: stderr_file_path
      :type:  pathlib.Path | None
      :value: None


      Path to file where error details are written on failure (stderr for subprocess path, traceback text for fork path).



   .. py:property:: is_running
      :type: bool


      Check if the job is still running.



   .. py:property:: is_success
      :type: bool


      Check if the job was successful.



   .. py:method:: failure_details()

      Format failure details, reading error text from the error file if available.



   .. py:method:: cleanup()

      Remove transient files owned by this job.



